--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
     -ms-user-select: none; /* Internet Explorer / Edge */
 }
 
+span {
+  cursor: pointer;
+}
+
 .font-droid {
     font-family: 'DroidSans', sans-serif;
     font-size: 1.5em;
